# pk-docs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml
.github/workflows/: check-snippets.yml  deploy-mkdocs.yml
00_pkarr/00_intro/: index.html
00_pkarr/01_get_started/: index.html
00_pkarr/02_init_client/: index.html
00_pkarr/03_resolve_record/: index.html
00_pkarr/04_publish_record/: index.html
00_pkarr/05_connect_tls/: index.html
00_pkarr/06_serve_tls/: index.html
01_get_started/: index.html
01_pubky_client/00_intro/: index.html
02_init_client/: index.html
02_pubky_app/00_intro/: index.html
03_build_own_app/00_intro/: index.html
03_storage_api/: index.html
04_homeserver_api/03_signup/: index.html
04_homeserver_api/04_put/: index.html
04_homeserver_api/05_get/: index.html
04_homeserver_api/06_delete/: index.html
05_pkdns/: index.html
09_pkdns_tls/: index.html
09_qr_auth/: index.html
docs/: 00_intro.md  02_init_client.md  03_storage_api.md  05_pkdns.md  09_pkdns_tls.md  09_qr_auth.md  index.md
docs/00_pkarr/: 00_intro.md  01_get_started.md  02_init_client.md  03_resolve_record.md  04_publish_record.md  07_dht_records.md  08_pkdns.md  08_pkdns_records.md  09_pkdns_tls.md
docs/01_pubky/: 00_intro.md  01_get_started.md  02_generate_keys.md  (+1 more)
search/: search_index.json
site/: 404.html  index.html
snippets/pkarr/: Cargo.toml
snippets/pkarr-dht-only/: Cargo.toml
snippets/pkarr-dht-only/src/: main.rs
snippets/pkarr-relays-only/: Cargo.toml
snippets/pkarr-relays-only/src/: main.rs
snippets/pkarr/src/: main.rs
(+45 files in other folders)
