[package]
name = "pkarr-snippets-dht-only"
version = "0.1.0"
edition = "2024"

[dependencies]
# --8<-- [start:pkarr-deps-dht-only]
pkarr = { version = "5.0.0", default-features = false, features = ["dht"] }
# --8<-- [end:pkarr-deps-dht-only]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.2"