[package]
name = "pkarr-snippets-relays-only"
version = "0.1.0"
edition = "2024"

[dependencies]
# --8<-- [start:pkarr-deps-relays-only]
pkarr = { version = "5.0.0", default-features = false, features = ["relays"] }
# --8<-- [end:pkarr-deps-relays-only]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.2"