[package]
name = "pkarr-snippets"
version = "0.1.0"
edition = "2024"

[dependencies]
# --8<-- [start:pkarr-deps]
pkarr = { version = "5.0.0", features = ["full"] }
# --8<-- [end:pkarr-deps]
anyhow = "1.0"
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
reqwest = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
url = "2.2"
